--- a/docs/sources/ipynb/documentation/PandasPDB.ipynb
+++ b/docs/sources/ipynb/documentation/PandasPDB.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last updated: 11/22/2015 \n",
+      "Last updated: 11/23/2015 \n",
       "\n",
       "CPython 3.5.0\n",
       "IPython 4.0.0\n",
@@ -68,19 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from biopandas import PandasPDB\n",
+    "from biopandas.pdb import PandasPDB\n",
     "\n",
     "# Initialize a new PandasPDB object\n",
-    "ppdb = PandasPDB()\n",
-    "\n",
-    "# Fetch the PDB file from rcsb.org\n",
-    "ppdb.fetch_pdb('3eiy')"
+    "# and fetch the PDB file from rcsb.org\n",
+    "ppdb = PandasPDB().fetch_pdb('3eiy')"
    ]
   },
   {
