--- a/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -28,8 +28,8 @@
       "CPython 3.5.0\n",
       "IPython 4.0.0\n",
       "\n",
-      "pandas 0.17.0\n",
-      "biopandas 0.1.0\n"
+      "pandas 0.17.1\n",
+      "biopandas 0.1.3\n"
      ]
     }
    ],
@@ -46,6 +46,7 @@
    },
    "outputs": [],
    "source": [
+    "from biopandas.pdb import PandasPDB\n",
     "import pandas as pd\n",
     "pd.set_option('display.width', 600)\n",
     "pd.set_option('display.max_columns', 8)"
@@ -314,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PDB files are parsed according to the [PDB file format description](http://www.rcsb.org/pdb/static.do?p=file_formats/pdb/index.html). More specifically, BioPandas reads the columns of the ATOM, HETATM, and ANISOU section as shown in the following excerpt from [http://deposit.rcsb.org/adit/docs/pdb_atom_format.html#ATOM](http://deposit.rcsb.org/adit/docs/pdb_atom_format.html#ATOM). "
+    "PDB files are parsed according to the [PDB file format description](http://www.rcsb.org/pdb/static.do?p=file_formats/pdb/index.html). More specifically, BioPandas reads the columns of the ATOM, HETATM, and ANISOU section as shown in the following excerpt from [http://deposit.rcsb.org/adit/docs/pdb_atom_format.html#ATOM](http://deposit.rcsb.org/adit/docs/pdb_atom_format.html#ATOM); note that the ANISOU section looks a bit different: [http://deposit.rcsb.org/adit/docs/pdb_atom_format.html#ANISOU](http://deposit.rcsb.org/adit/docs/pdb_atom_format.html#ANISOU)"
    ]
   },
   {
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -381,10 +382,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['OTHERS', 'HETATM', 'ATOM', 'ANISOU'])"
+       "dict_keys(['ATOM', 'OTHERS', 'HETATM', 'ANISOU'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,12 +418,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The columns of the 'HETATM' and 'ANISOU' DataFrames are indentical to the 'ATOM' DataFrame that we've seen earlier:"
+    "The columns of the 'HETATM' DataFrame are indentical to the 'ATOM' DataFrame that we've seen earlier:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +485,7 @@
        "[2 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,8 +495,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And 'ANISOU' entries are handled a bit differently, ..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -513,7 +521,7 @@
        "      <th>blank_1</th>\n",
        "      <th>atom_name</th>\n",
        "      <th>...</th>\n",
-       "      <th>segment_id</th>\n",
+       "      <th>blank_4</th>\n",
        "      <th>element_symbol</th>\n",
        "      <th>charge</th>\n",
        "      <th>line_idx</th>\n",
@@ -527,13 +535,13 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [record_name, atom_number, blank_1, atom_name, alt_loc, residue_name, blank_2, chain_id, residue_number, insertion, blank_3, x_coord, y_coord, z_coord, occupancy, b_factor, blank_4, segment_id, element_symbol, charge, line_idx]\n",
+       "Columns: [record_name, atom_number, blank_1, atom_name, alt_loc, residue_name, blank_2, chain_id, residue_number, insertion, blank_3, U(1,1), U(2,2), U(3,3), U(1,2), U(1,3), U(2,3), blank_4, element_symbol, charge, line_idx]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,12 +554,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Since the DataFrame is pretty broad, it'd probably better so show the column names separately:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['record_name', 'atom_number', 'blank_1', 'atom_name', 'alt_loc', 'residue_name', 'blank_2', 'chain_id', 'residue_number', 'insertion', 'blank_3', 'U(1,1)', 'U(2,2)', 'U(3,3)', 'U(1,2)', 'U(1,3)', 'U(2,3)', 'blank_4', 'element_symbol', 'charge', 'line_idx'], dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ppdb.df['ANISOU'].columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Ah, another interesting thing to mention is that the columns already come with the types you'd expect (where `object` essentially \"means\" `str` here):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -583,7 +620,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -670,7 +707,7 @@
        "4      COMPND             2 MOLECULE: INORGANIC PYROPHOSPHATASE;         4"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
