amino3to1 conversion

--- a/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -1669,6 +1669,221 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Converting Amino Acid codes from 3- to 1-letter codes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Residues in the `residue_name` field can be converted into 1-letter amino acid codes, which may be useful for further sequence analysis, for example, pair-wise or multiple sequence alignments:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['S',\n",
+       " 'F',\n",
+       " 'S',\n",
+       " 'N',\n",
+       " 'V',\n",
+       " 'P',\n",
+       " 'A',\n",
+       " 'G',\n",
+       " 'K',\n",
+       " 'D',\n",
+       " 'L',\n",
+       " 'P',\n",
+       " 'Q',\n",
+       " 'D',\n",
+       " 'F',\n",
+       " 'N',\n",
+       " 'V',\n",
+       " 'I',\n",
+       " 'I',\n",
+       " 'E',\n",
+       " 'I',\n",
+       " 'P',\n",
+       " 'A',\n",
+       " 'Q',\n",
+       " 'S',\n",
+       " 'E',\n",
+       " 'P',\n",
+       " 'V',\n",
+       " 'K',\n",
+       " 'Y',\n",
+       " 'E',\n",
+       " 'A',\n",
+       " 'D',\n",
+       " 'K',\n",
+       " 'A',\n",
+       " 'L',\n",
+       " 'G',\n",
+       " 'L',\n",
+       " 'L',\n",
+       " 'V',\n",
+       " 'V',\n",
+       " 'D',\n",
+       " 'R',\n",
+       " 'F',\n",
+       " 'I',\n",
+       " 'G',\n",
+       " 'T',\n",
+       " 'G',\n",
+       " 'M',\n",
+       " 'R',\n",
+       " 'Y',\n",
+       " 'P',\n",
+       " 'V',\n",
+       " 'N',\n",
+       " 'Y',\n",
+       " 'G',\n",
+       " 'F',\n",
+       " 'I',\n",
+       " 'P',\n",
+       " 'Q',\n",
+       " 'T',\n",
+       " 'L',\n",
+       " 'S',\n",
+       " 'G',\n",
+       " 'D',\n",
+       " 'G',\n",
+       " 'D',\n",
+       " 'P',\n",
+       " 'V',\n",
+       " 'D',\n",
+       " 'V',\n",
+       " 'L',\n",
+       " 'V',\n",
+       " 'I',\n",
+       " 'T',\n",
+       " 'P',\n",
+       " 'F',\n",
+       " 'P',\n",
+       " 'L',\n",
+       " 'L',\n",
+       " 'A',\n",
+       " 'G',\n",
+       " 'S',\n",
+       " 'V',\n",
+       " 'V',\n",
+       " 'R',\n",
+       " 'A',\n",
+       " 'R',\n",
+       " 'A',\n",
+       " 'L',\n",
+       " 'G',\n",
+       " 'M',\n",
+       " 'L',\n",
+       " 'K',\n",
+       " 'M',\n",
+       " 'T',\n",
+       " 'D',\n",
+       " 'E',\n",
+       " 'S',\n",
+       " 'G',\n",
+       " 'V',\n",
+       " 'D',\n",
+       " 'A',\n",
+       " 'K',\n",
+       " 'L',\n",
+       " 'V',\n",
+       " 'A',\n",
+       " 'V',\n",
+       " 'P',\n",
+       " 'H',\n",
+       " 'D',\n",
+       " 'K',\n",
+       " 'V',\n",
+       " 'C',\n",
+       " 'P',\n",
+       " 'M',\n",
+       " 'T',\n",
+       " 'A',\n",
+       " 'N',\n",
+       " 'L',\n",
+       " 'K',\n",
+       " 'S',\n",
+       " 'I',\n",
+       " 'D',\n",
+       " 'D',\n",
+       " 'V',\n",
+       " 'P',\n",
+       " 'A',\n",
+       " 'Y',\n",
+       " 'L',\n",
+       " 'K',\n",
+       " 'D',\n",
+       " 'Q',\n",
+       " 'I',\n",
+       " 'K',\n",
+       " 'H',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'E',\n",
+       " 'Q',\n",
+       " 'Y',\n",
+       " 'K',\n",
+       " 'A',\n",
+       " 'L',\n",
+       " 'E',\n",
+       " 'K',\n",
+       " 'G',\n",
+       " 'K',\n",
+       " 'W',\n",
+       " 'V',\n",
+       " 'K',\n",
+       " 'V',\n",
+       " 'E',\n",
+       " 'G',\n",
+       " 'W',\n",
+       " 'D',\n",
+       " 'G',\n",
+       " 'I',\n",
+       " 'D',\n",
+       " 'A',\n",
+       " 'A',\n",
+       " 'H',\n",
+       " 'K',\n",
+       " 'E',\n",
+       " 'I',\n",
+       " 'T',\n",
+       " 'D',\n",
+       " 'G',\n",
+       " 'V',\n",
+       " 'A',\n",
+       " 'N',\n",
+       " 'F',\n",
+       " 'K',\n",
+       " 'K']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from biopandas.pdb import PandasPDB\n",
+    "ppdb = PandasPDB().read_pdb('./data/3eiy.pdb.gz')\n",
+    "ppdb.amino3to1()\n",
+    "# By default, `amino3to1` returns a pandas Series object,\n",
+    "# and to convert it into a Python list, you can wrap it in list\n",
+    "# constructor, e.g.,\n",
+    "# `list(ppdb.amino3to1())`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Wrapping it up - Saving PDB structures"
    ]
   },
@@ -1743,8 +1958,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
