--- a/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -23,19 +23,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "last updated: 2016-10-19 \n",
+      "last updated: 2017-02-09 \n",
       "\n",
-      "CPython 3.5.2\n",
-      "IPython 5.1.0\n",
-      "\n",
-      "pandas 0.18.1\n",
-      "biopandas 0.1.5.dev0\n"
+      "pandas 0.19.2\n",
+      "biopandas 0.1.5\n"
      ]
     }
    ],
    "source": [
     "%load_ext watermark\n",
-    "%watermark -d -u -v -p pandas,biopandas"
+    "%watermark -d -u -p pandas,biopandas"
    ]
   },
   {
@@ -115,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "<biopandas.pdb.pandas_pdb.PandasPDB at 0x104937cf8>"
+       "<biopandas.pdb.pandas_pdb.PandasPDB at 0x10693ab38>"
       ]
      },
      "execution_count": 4,
@@ -146,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<biopandas.pdb.pandas_pdb.PandasPDB at 0x104937cf8>"
+       "<biopandas.pdb.pandas_pdb.PandasPDB at 0x10693ab38>"
       ]
      },
      "execution_count": 5,
@@ -389,7 +386,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['HETATM', 'ANISOU', 'ATOM', 'OTHERS'])"
+       "dict_keys(['ATOM', 'HETATM', 'ANISOU', 'OTHERS'])"
       ]
      },
      "execution_count": 8,
@@ -1662,7 +1659,191 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[more to come]"
+    "## Filtering PDBs by Distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the `distance` method to compute the distance between each atom (or a subset of atoms) in our data frame and a three-dimensional reference point. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p_1 = PandasPDB().read_pdb('./data/3eiy.pdb')\n",
+    "\n",
+    "reference_point = (9.362, 41.410, 10.542)\n",
+    "distances = p_1.distance(xyz=reference_point, record='ATOM')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The distance method returns a Pandas Series object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    19.267419\n",
+       "1    18.306060\n",
+       "2    16.976934\n",
+       "3    16.902897\n",
+       "4    18.124171\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distances.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we can use this `Series` object, for instance, to select certain atoms in our DataFrame that fall within a desired distance threshold. For example, let's select all atoms that are within 7A of our reference point: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>record_name</th>\n",
+       "      <th>atom_number</th>\n",
+       "      <th>blank_1</th>\n",
+       "      <th>atom_name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>segment_id</th>\n",
+       "      <th>element_symbol</th>\n",
+       "      <th>charge</th>\n",
+       "      <th>line_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>786</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>787</td>\n",
+       "      <td></td>\n",
+       "      <td>CB</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>787</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>788</td>\n",
+       "      <td></td>\n",
+       "      <td>CG</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>788</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>789</td>\n",
+       "      <td></td>\n",
+       "      <td>CD1</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>789</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>790</td>\n",
+       "      <td></td>\n",
+       "      <td>CD2</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>790</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>791</td>\n",
+       "      <td></td>\n",
+       "      <td>N</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1399</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    record_name  atom_number blank_1 atom_name   ...    segment_id element_symbol charge line_idx\n",
+       "786        ATOM          787                CB   ...                            C    NaN     1395\n",
+       "787        ATOM          788                CG   ...                            C    NaN     1396\n",
+       "788        ATOM          789               CD1   ...                            C    NaN     1397\n",
+       "789        ATOM          790               CD2   ...                            C    NaN     1398\n",
+       "790        ATOM          791                 N   ...                            N    NaN     1399\n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_within_7A = p_1.df['ATOM'][distances < 7.0]\n",
+    "all_within_7A.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualized in PyMOL, this subset (yellow surface) would look as follows:\n",
+    "    \n",
+    "![](./img/3eiy_7a.png)"
    ]
   },
   {
