--- a/docs/sources/tutorials/Working_with_MOL2_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_MOL2_Structures_in_DataFrames.ipynb
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "from biopandas.mol2 import PandasMOL2\n",
+    "from biopandas.mol2 import PandasMol2\n",
     "import pandas as pd\n",
     "pd.set_option('display.width', 600)\n",
     "pd.set_option('display.max_columns', 8)"
@@ -85,9 +85,9 @@
    },
    "outputs": [],
    "source": [
-    "from biopandas.mol2 import PandasMOL2\n",
+    "from biopandas.mol2 import PandasMol2\n",
     "\n",
-    "pmol = PandasMOL2().read_mol2('./data/1b5e_1.mol2')"
+    "pmol = PandasMol2().read_mol2('./data/1b5e_1.mol2')"
    ]
   },
   {
@@ -107,14 +107,14 @@
    },
    "outputs": [],
    "source": [
-    "pmol = PandasMOL2().read_mol2('./data/40_mol2_files.mol2.gz')"
+    "pmol = PandasMol2().read_mol2('./data/40_mol2_files.mol2.gz')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After the file was succesfully loaded, we have access to the following basic `PandasMOL2` attributes:"
+    "After the file was succesfully loaded, we have access to the following basic `PandasMol2` attributes:"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most interesting and useful attribute, however, is the [`PandasMOL2.df`](../api/biopandas.mol2#pandasmol2df) DataFrame, which contains the ATOM section of the MOL2 structure. Let's print the first 3 lines from the `ATOM` coordinate section to see how it looks like:"
+    "The most interesting and useful attribute, however, is the [`PandasMol2.df`](../api/biopandas.mol2#pandasmol2df) DataFrame, which contains the ATOM section of the MOL2 structure. Let's print the first 3 lines from the `ATOM` coordinate section to see how it looks like:"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`PandasMOL2` expects the MOL2 file to be in the standard Tripos MOL2 format, and most importantly, that the \"@<TRIPOS>ATOM\" section is consistent with the following format convention:\n",
+    "`PandasMol2` expects the MOL2 file to be in the standard Tripos MOL2 format, and most importantly, that the \"@<TRIPOS>ATOM\" section is consistent with the following format convention:\n",
     "\n",
     "\n",
     "> Format:\n",
@@ -500,9 +500,9 @@
     }
    ],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
+    "from biopandas.pdb import PandasPdb\n",
     "\n",
-    "pmol = PandasMOL2()\n",
+    "pmol = PandasMol2()\n",
     "pmol.read_mol2('./data/1b5e_1.mol2')\n",
     "pmol.df.tail(10)"
    ]
@@ -868,7 +868,7 @@
     {
      "data": {
       "text/plain": [
-       "<biopandas.mol2.pandas_mol2.PandasMOL2 at 0x1067e2b70>"
+       "<biopandas.mol2.pandas_mol2.PandasMol2 at 0x1067e2b70>"
       ]
      },
      "execution_count": 10,
@@ -877,9 +877,9 @@
     }
    ],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
+    "from biopandas.pdb import PandasPdb\n",
     "\n",
-    "pmol = PandasMOL2()\n",
+    "pmol = PandasMol2()\n",
     "pmol.read_mol2('./data/1b5e_1.mol2')"
    ]
   },
@@ -1044,13 +1044,13 @@
     }
    ],
    "source": [
-    "from biopandas.mol2 import PandasMOL2\n",
+    "from biopandas.mol2 import PandasMol2\n",
     "\n",
-    "l_1 = PandasMOL2().read_mol2('./data/1b5e_1.mol2')\n",
-    "l_2 = PandasMOL2().read_mol2('./data/1b5e_2.mol2')\n",
+    "l_1 = PandasMol2().read_mol2('./data/1b5e_1.mol2')\n",
+    "l_2 = PandasMol2().read_mol2('./data/1b5e_2.mol2')\n",
     "\n",
-    "r_heavy = PandasMOL2.rmsd(l_1.df, l_2.df)\n",
-    "r_all  = PandasMOL2.rmsd(l_1.df, l_2.df, heavy_only=False)\n",
+    "r_heavy = PandasMol2.rmsd(l_1.df, l_2.df)\n",
+    "r_all  = PandasMol2.rmsd(l_1.df, l_2.df, heavy_only=False)\n",
     "\n",
     "print('Heavy-atom RMSD: %.4f Angstrom' % r_heavy)\n",
     "print('All-atom RMSD: %.4f Angstrom' % r_all)"
@@ -1126,9 +1126,9 @@
     }
    ],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
+    "from biopandas.pdb import PandasPdb\n",
     "\n",
-    "pmol = PandasMOL2().read_mol2('./data/1b5e_1.mol2')\n",
+    "pmol = PandasMol2().read_mol2('./data/1b5e_1.mol2')\n",
     "\n",
     "keto_coord = pmol.df[pmol.df['atom_type'] == 'O.2'][['x', 'y', 'z']]\n",
     "keto_coord"
@@ -1499,7 +1499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned earlier, `PandasMOL2.read_mol2()` only reads in the first molecule if it is given a multi-MOL2 file. However, if we want to create DataFrames from multiple structures in a MOL2 file, we can use the handy `split_multimol2` generator.\n",
+    "As mentioned earlier, `PandasMol2.read_mol2()` only reads in the first molecule if it is given a multi-MOL2 file. However, if we want to create DataFrames from multiple structures in a MOL2 file, we can use the handy `split_multimol2` generator.\n",
     "\n",
     "The `split_multimol2` generator yields tuples containing the molecule IDs and the MOL2 content as strings in a list -- each line in the MOL2 file is stored as a string in the list."
    ]
@@ -1535,7 +1535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now use this generator to loop over all files in a multi-MOL2 file and create PandasMOL2 DataFrames. A typical use case would be the filtering of mol2 files by certain properties:"
+    "We can now use this generator to loop over all files in a multi-MOL2 file and create PandasMol2 DataFrames. A typical use case would be the filtering of mol2 files by certain properties:"
    ]
   },
   {
@@ -1546,7 +1546,7 @@
    },
    "outputs": [],
    "source": [
-    "pdmol = PandasMOL2()\n",
+    "pdmol = PandasMol2()\n",
     "\n",
     "with open('./data/filtered.mol2', 'w') as f:\n",
     "    for mol2 in split_multimol2('./data/40_mol2_files.mol2'):\n",
