--- a/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
+    "from biopandas.pdb import PandasPdb\n",
     "import pandas as pd\n",
     "pd.set_option('display.width', 600)\n",
     "pd.set_option('display.max_columns', 8)"
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 2 1/2 ways to load a PDB structure into a `PandasPDB` object.\n"
+    "There are 2 1/2 ways to load a PDB structure into a `PandasPdb` object.\n"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     "#### 1\n",
-    "PDB files can be directly fetched from The Protein Data Bank at [http://www.rcsb.org](http://www.rcsb.org) via its unique 4-letter after initializing a new [`PandasPDB`](../api/biopandas.pdb#pandaspdb) object and calling the [`fetch_pdb`](../api/biopandas.pdb#pandaspdbfetch_pdb) method:"
+    "PDB files can be directly fetched from The Protein Data Bank at [http://www.rcsb.org](http://www.rcsb.org) via its unique 4-letter after initializing a new [`PandasPdb`](../api/biopandas.pdb#pandaspdb) object and calling the [`fetch_pdb`](../api/biopandas.pdb#pandaspdbfetch_pdb) method:"
    ]
   },
   {
@@ -86,11 +86,11 @@
    },
    "outputs": [],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
+    "from biopandas.pdb import PandasPdb\n",
     "\n",
-    "# Initialize a new PandasPDB object\n",
+    "# Initialize a new PandasPdb object\n",
     "# and fetch the PDB file from rcsb.org\n",
-    "ppdb = PandasPDB().fetch_pdb('3eiy')"
+    "ppdb = PandasPdb().fetch_pdb('3eiy')"
    ]
   },
   {
@@ -112,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "<biopandas.pdb.pandas_pdb.PandasPDB at 0x106795898>"
+       "<biopandas.pdb.pandas_pdb.PandasPdb at 0x106795898>"
       ]
      },
      "execution_count": 4,
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<biopandas.pdb.pandas_pdb.PandasPDB at 0x106795898>"
+       "<biopandas.pdb.pandas_pdb.PandasPdb at 0x106795898>"
       ]
      },
      "execution_count": 5,
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most interesting / useful attribute is the [`PandasPDB.df`](../api/biopandas.pdb#pandaspdbdf) DataFrame dictionary though, which gives us access to the PDB files as pandas DataFrames. Let's print the first 3 lines from the `ATOM` coordinate section to see how it looks like:"
+    "The most interesting / useful attribute is the [`PandasPdb.df`](../api/biopandas.pdb#pandaspdbdf) DataFrame dictionary though, which gives us access to the PDB files as pandas DataFrames. Let's print the first 3 lines from the `ATOM` coordinate section to see how it looks like:"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After loading a PDB file from rcsb.org or our local drive, the [`PandasPDB.df`](../api/biopandas.pdb/#pandaspdbdf) attribute should contain the following 4 DataFrame objects:"
+    "After loading a PDB file from rcsb.org or our local drive, the [`PandasPdb.df`](../api/biopandas.pdb/#pandaspdbdf) attribute should contain the following 4 DataFrame objects:"
    ]
   },
   {
@@ -395,8 +395,8 @@
     }
    ],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
-    "ppdb = PandasPDB()\n",
+    "from biopandas.pdb import PandasPdb\n",
+    "ppdb = PandasPdb()\n",
     "ppdb.read_pdb('./data/3eiy.pdb')\n",
     "ppdb.df.keys()"
    ]
@@ -954,8 +954,8 @@
     }
    ],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
-    "ppdb = PandasPDB()\n",
+    "from biopandas.pdb import PandasPdb\n",
+    "ppdb = PandasPdb()\n",
     "ppdb.read_pdb('./data/3eiy.pdb.gz')\n",
     "ppdb.df['ATOM'].head()"
    ]
@@ -1381,8 +1381,8 @@
    },
    "outputs": [],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
-    "ppdb = PandasPDB().read_pdb('./data/3eiy.pdb.gz')"
+    "from biopandas.pdb import PandasPdb\n",
+    "ppdb = PandasPdb().read_pdb('./data/3eiy.pdb.gz')"
    ]
   },
   {
@@ -1530,11 +1530,11 @@
     }
    ],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
+    "from biopandas.pdb import PandasPdb\n",
     "\n",
-    "l_1 = PandasPDB().read_pdb('./data/lig_conf_1.pdb')\n",
-    "l_2 = PandasPDB().read_pdb('./data/lig_conf_2.pdb')\n",
-    "r = PandasPDB.rmsd(l_1.df['HETATM'], l_2.df['HETATM'],\n",
+    "l_1 = PandasPdb().read_pdb('./data/lig_conf_1.pdb')\n",
+    "l_2 = PandasPdb().read_pdb('./data/lig_conf_2.pdb')\n",
+    "r = PandasPdb.rmsd(l_1.df['HETATM'], l_2.df['HETATM'],\n",
     "                   s=None) # all atoms, including hydrogens\n",
     "print('RMSD: %.4f Angstrom' % r)"
    ]
@@ -1555,7 +1555,7 @@
     }
    ],
    "source": [
-    "r = PandasPDB.rmsd(l_1.df['HETATM'], l_2.df['HETATM'], \n",
+    "r = PandasPdb.rmsd(l_1.df['HETATM'], l_2.df['HETATM'], \n",
     "                   s='carbon') # carbon atoms only\n",
     "print('RMSD: %.4f Angstrom' % r)"
    ]
@@ -1576,7 +1576,7 @@
     }
    ],
    "source": [
-    "r = PandasPDB.rmsd(l_1.df['HETATM'], l_2.df['HETATM'], \n",
+    "r = PandasPdb.rmsd(l_1.df['HETATM'], l_2.df['HETATM'], \n",
     "                   s='heavy') # heavy atoms only\n",
     "print('RMSD: %.4f Angstrom' % r)"
    ]
@@ -1613,9 +1613,9 @@
     }
    ],
    "source": [
-    "p_1 = PandasPDB().read_pdb('./data/1t48_995.pdb')\n",
-    "p_2 = PandasPDB().read_pdb('./data/1t49_995.pdb')\n",
-    "r = PandasPDB.rmsd(p_1.df['ATOM'], p_2.df['ATOM'], s='heavy')\n",
+    "p_1 = PandasPdb().read_pdb('./data/1t48_995.pdb')\n",
+    "p_2 = PandasPdb().read_pdb('./data/1t49_995.pdb')\n",
+    "r = PandasPdb.rmsd(p_1.df['ATOM'], p_2.df['ATOM'], s='heavy')\n",
     "print('RMSD: %.4f Angstrom' % r)"
    ]
   },
@@ -1642,9 +1642,9 @@
     }
    ],
    "source": [
-    "p_1 = PandasPDB().read_pdb('./data/1t48_995.pdb')\n",
-    "p_2 = PandasPDB().read_pdb('./data/1t49_995.pdb')\n",
-    "r = PandasPDB.rmsd(p_1.df['ATOM'], p_2.df['ATOM'], s='main chain')\n",
+    "p_1 = PandasPdb().read_pdb('./data/1t48_995.pdb')\n",
+    "p_2 = PandasPdb().read_pdb('./data/1t49_995.pdb')\n",
+    "r = PandasPdb.rmsd(p_1.df['ATOM'], p_2.df['ATOM'], s='main chain')\n",
     "print('RMSD: %.4f Angstrom' % r)"
    ]
   },
@@ -1677,7 +1677,7 @@
    },
    "outputs": [],
    "source": [
-    "p_1 = PandasPDB().read_pdb('./data/3eiy.pdb')\n",
+    "p_1 = PandasPdb().read_pdb('./data/3eiy.pdb')\n",
     "\n",
     "reference_point = (9.362, 41.410, 10.542)\n",
     "distances = p_1.distance(xyz=reference_point, record='ATOM')"
@@ -1940,8 +1940,8 @@
     }
    ],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
-    "ppdb = PandasPDB().read_pdb('./data/3eiy.pdb.gz')\n",
+    "from biopandas.pdb import PandasPdb\n",
+    "ppdb = PandasPdb().read_pdb('./data/3eiy.pdb.gz')\n",
     "ppdb.amino3to1()\n",
     "# By default, `amino3to1` returns a pandas Series object,\n",
     "# and to convert it into a Python list, you can wrap it in list\n",
@@ -1978,8 +1978,8 @@
    },
    "outputs": [],
    "source": [
-    "from biopandas.pdb import PandasPDB\n",
-    "ppdb = PandasPDB().read_pdb('./data/3eiy.pdb.gz')\n",
+    "from biopandas.pdb import PandasPdb\n",
+    "ppdb = PandasPdb().read_pdb('./data/3eiy.pdb.gz')\n",
     "ppdb.df['ATOM'] = ppdb.df['ATOM'][ppdb.df['ATOM']['element_symbol'] != 'H']"
    ]
   },
@@ -1987,7 +1987,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can save the file using the [`PandasPDB.to_pdb`](../api/biopandas.pdb#pandaspdbto_pdb) method:"
+    "We can save the file using the [`PandasPdb.to_pdb`](../api/biopandas.pdb#pandaspdbto_pdb) method:"
    ]
   },
   {
