--- a/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -1507,7 +1507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, assuming that the we have the following 2 conformation of a ligand molecule\n",
+    "So, assuming that the we have the following 2 conformations of a ligand molecule\n",
     "\n",
     "![](./img/ligand_rmsd.png)\n",
     "\n",
