--- a/docs/sources/tutorials/Working_with_MOL2_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_MOL2_Structures_in_DataFrames.ipynb
@@ -92,6 +92,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[File link: [1b5e_1.mol2](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/1b5e_1.mol2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The `read_mol2` method can also load structures from `.mol2.gz` files, but if you have a multi-mol2 file, keep in mind that it will only fetch the first molecule in this file. In the section \"[Parsing Multi-MOL2 files](#parsing-multi-mol2-files),\" we will see how we can parse files that contain multiple structures."
    ]
   },
@@ -104,6 +111,13 @@
    "outputs": [],
    "source": [
     "pmol = PandasMol2().read_mol2('./data/40_mol2_files.mol2.gz')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[File link: [40_mol2_files.mol2.gz](https://github.com/rasbt/biopandas/blob/master/docs/sources/tutorials/data/40_mol2_files.mol2.gz?raw=true)]"
    ]
   },
   {
@@ -508,6 +522,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[File link: [1b5e_1.mol2](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/1b5e_1.mol2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For example, we can select all hydrogen atoms by filtering on the atom type column:"
    ]
   },
@@ -861,12 +882,21 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from biopandas.mol2 import PandasMol2\n",
     "\n",
     "pmol = PandasMol2().read_mol2('./data/1b5e_1.mol2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[File link: [1b5e_1.mol2](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/1b5e_1.mol2)]"
    ]
   },
   {
@@ -1030,6 +1060,13 @@
     "\n",
     "print('Heavy-atom RMSD: %.4f Angstrom' % r_heavy)\n",
     "print('All-atom RMSD: %.4f Angstrom' % r_all)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[File links: [1b5e_1.mol2](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/1b5e_1.mol2), [1b5e_2.mol2](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/1b5e_2.mol2)]"
    ]
   },
   {
@@ -1532,13 +1569,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[File link: [40_mol2_files.mol2](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/40_mol2_files.mol2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can now use this generator to loop over all files in a multi-MOL2 file and create PandasMol2 DataFrames. A typical use case would be the filtering of mol2 files by certain properties:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pdmol = PandasMol2()\n",
@@ -1560,7 +1606,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1574,7 +1620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
