add multiprocessing example

--- a/docs/sources/tutorials/Working_with_MOL2_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_MOL2_Structures_in_DataFrames.ipynb
@@ -1535,6 +1535,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Basic Multi-MOL2 File Parsing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "As mentioned earlier, `PandasMol2.read_mol2` method only reads in the first molecule if it is given a multi-MOL2 file. However, if we want to create DataFrames from multiple structures in a MOL2 file, we can use the handy `split_multimol2` generator.\n",
     "\n",
     "The `split_multimol2` generator yields tuples containing the molecule IDs and the MOL2 content as strings in a list -- each line in the MOL2 file is stored as a string in the list."
@@ -1542,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1601,6 +1608,107 @@
     "            # note that the mol2_text contains the original mol2 content\n",
     "            f.write(pdmol.mol2_text) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Multiprocessing for Multi-MOL2 File Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To improve the computational efficiency and throughput for multi-mol2 analyses, it is recommended to use the [`mputil`](https://github.com/rasbt/mputil) package, which evaluates Python generators lazily. The `lazy_imap` function from `mputil` is based on Python's standardlib multiprocessing `imap` function, but it doesn't consume the generator upfront. This lazy evaluation is important, for example, if we are parsing large (possibly Gigabyte- or Terabyte-large) multi-mol2 files for multiprocessing.\n",
+    "\n",
+    "The following example provides a template for atom-type based molecule queries, but the `data_processor` function can be extended to do any kind of functional group queries (for example, involving the `'charge'` column and/or `PandasMol2.distance` method). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from mputil import lazy_imap\n",
+    "from biopandas.mol2 import PandasMol2\n",
+    "from biopandas.mol2 import split_multimol2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searched 40 molecules. Got 3 hits.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Selection strings to capture\n",
+    "# all molecules that contain at least one sp2 hybridized\n",
+    "# oxygen atom and at least one Fluorine atom\n",
+    "SELECTIONS = [\"(pdmol.df.atom_type == 'O.2')\",\n",
+    "              \"(pdmol.df.atom_type == 'F')\"]\n",
+    " \n",
+    "# Path to the multi-mol2 input file\n",
+    "MOL2_FILE = \"./data/40_mol2_files.mol2\"\n",
+    "\n",
+    "# Data processing function to be run in parallel\n",
+    "def data_processor(mol2):\n",
+    "    \"\"\"Return molecule ID if there's a match and '' otherwise\"\"\"\n",
+    "    pdmol = PandasMol2().read_mol2_from_list(mol2_lines=mol2[1],\n",
+    "                                             mol2_code=mol2[0])\n",
+    "    match = mol2[0]\n",
+    "    for sub_sele in SELECTIONS:\n",
+    "        if not pd.eval(sub_sele).any():\n",
+    "            match = ''\n",
+    "            break\n",
+    "    return match\n",
+    "\n",
+    "# Process molecules and save IDs of hits to disk\n",
+    "with open('./data/selected_ids.txt', 'w') as f:       \n",
+    "    searched, found = 0, 0\n",
+    "    for chunk in lazy_imap(data_processor=data_processor,\n",
+    "                           data_generator=split_multimol2(MOL2_FILE),\n",
+    "                           n_cpus=0): # means all available cpus\n",
+    "\n",
+    "        for mol2_id in chunk:\n",
+    "            if mol2_id:\n",
+    "                # write IDs of matching molecules to disk\n",
+    "                f.write('%s\\n' % mol2_id)\n",
+    "                found += 1\n",
+    "        searched += len(chunk)\n",
+    "            \n",
+    "        \n",
+    "print('Searched %d molecules. Got %d hits.' % (searched, found))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Input File link: [40_mol2_files.mol2](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/40_mol2_files.mol2)]\n",
+    "\n",
+    "[Output File link: [selected_ids.txt](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/selected_ids.txt)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1620,7 +1728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
