add deprecation warning for backwards compatib

--- a/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/sources/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -21,10 +21,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "last updated: 2017-04-12 \n",
+      "last updated: 2017-09-26 \n",
       "\n",
-      "pandas 0.19.2\n",
-      "biopandas 0.2.1.dev0\n"
+      "pandas 0.20.3\n",
+      "biopandas 0.2.3dev0\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "<biopandas.pdb.pandas_pdb.PandasPdb at 0x10462bf28>"
+       "<biopandas.pdb.pandas_pdb.PandasPdb at 0x10916e710>"
       ]
      },
      "execution_count": 4,
@@ -144,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "<biopandas.pdb.pandas_pdb.PandasPdb at 0x10462bf28>"
+       "<biopandas.pdb.pandas_pdb.PandasPdb at 0x10916e710>"
       ]
      },
      "execution_count": 5,
@@ -223,6 +223,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -2116,7 +2129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
