--- a/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 2 1/2 ways to load a PDB structure into a `PandasPdb` object.\n"
+    "There are 3 ways to load a PDB structure into a `PandasPdb` object.\n"
    ]
   },
   {
@@ -78,19 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from biopandas.pdb import PandasPdb\n",
-    "\n",
-    "# Initialize a new PandasPdb object\n",
-    "# and fetch the PDB file from rcsb.org\n",
-    "ppdb = PandasPdb().fetch_pdb('3eiy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy.pdb](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/3eiy.pdb)]"
+    "[File link: [3eiy.pdb](https://raw.githubusercontent.com/rasbt/biopandas/main/docs/tutorials/data/3eiy.pdb)]"
    ]
   },
   {
@@ -170,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy.pdb.gz](https://github.com/rasbt/biopandas/blob/master/docs/sources/tutorials/data/3eiy.pdb.gz?raw=true)]"
+    "[File link: [3eiy.pdb.gz](https://github.com/rasbt/biopandas/blob/main/docs/tutorials/data/3eiy.pdb.gz?raw=true)]"
    ]
   },
   {
@@ -332,6 +319,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 3) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Loading PDB files from a Python List**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since biopandas 0.3.0, PDB files can also be loaded into a PandasPdb object from a Python list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>record_name</th>\n",
+       "      <th>atom_number</th>\n",
+       "      <th>blank_1</th>\n",
+       "      <th>atom_name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>segment_id</th>\n",
+       "      <th>element_symbol</th>\n",
+       "      <th>charge</th>\n",
+       "      <th>line_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>N</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td>CA</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>4</td>\n",
+       "      <td></td>\n",
+       "      <td>O</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>O</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>5</td>\n",
+       "      <td></td>\n",
+       "      <td>CB</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>613</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  record_name  atom_number blank_1 atom_name  ... segment_id element_symbol charge line_idx\n",
+       "0        ATOM            1                 N  ...                         N    NaN      609\n",
+       "1        ATOM            2                CA  ...                         C    NaN      610\n",
+       "2        ATOM            3                 C  ...                         C    NaN      611\n",
+       "3        ATOM            4                 O  ...                         O    NaN      612\n",
+       "4        ATOM            5                CB  ...                         C    NaN      613\n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('./data/3eiy.pdb', 'r') as f:\n",
+    "    three_eiy = f.readlines()\n",
+    "\n",
+    "ppdb2 = PandasPdb()\n",
+    "ppdb2.read_pdb_from_list(three_eiy)\n",
+    "\n",
+    "ppdb2.df['ATOM'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Looking at PDBs in DataFrames"
    ]
   },
@@ -430,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy.pdb](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/3eiy.pdb)]"
+    "[File link: [3eiy.pdb](https://raw.githubusercontent.com/rasbt/biopandas/main/docs/tutorials/data/3eiy.pdb)]"
    ]
   },
   {
@@ -1028,7 +1165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy.pdb.gz](https://github.com/rasbt/biopandas/blob/master/docs/sources/tutorials/data/3eiy.pdb.gz?raw=true)]"
+    "[File link: [3eiy.pdb.gz](https://github.com/rasbt/biopandas/blob/main/docs/tutorials/data/3eiy.pdb.gz?raw=true)]"
    ]
   },
   {
@@ -1463,149 +1600,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Loading PDB files from a Python List**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since biopandas 0.3.0, PDB files can also be loaded into a PandasPdb object from a Python list:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>record_name</th>\n",
-       "      <th>atom_number</th>\n",
-       "      <th>blank_1</th>\n",
-       "      <th>atom_name</th>\n",
-       "      <th>...</th>\n",
-       "      <th>segment_id</th>\n",
-       "      <th>element_symbol</th>\n",
-       "      <th>charge</th>\n",
-       "      <th>line_idx</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ATOM</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "      <td>N</td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>609</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ATOM</td>\n",
-       "      <td>2</td>\n",
-       "      <td></td>\n",
-       "      <td>CA</td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td>C</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ATOM</td>\n",
-       "      <td>3</td>\n",
-       "      <td></td>\n",
-       "      <td>C</td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td>C</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ATOM</td>\n",
-       "      <td>4</td>\n",
-       "      <td></td>\n",
-       "      <td>O</td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td>O</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>612</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ATOM</td>\n",
-       "      <td>5</td>\n",
-       "      <td></td>\n",
-       "      <td>CB</td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td>C</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>613</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  record_name  atom_number blank_1 atom_name  ... segment_id element_symbol charge line_idx\n",
-       "0        ATOM            1                 N  ...                         N    NaN      609\n",
-       "1        ATOM            2                CA  ...                         C    NaN      610\n",
-       "2        ATOM            3                 C  ...                         C    NaN      611\n",
-       "3        ATOM            4                 O  ...                         O    NaN      612\n",
-       "4        ATOM            5                CB  ...                         C    NaN      613\n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open('./data/3eiy.pdb', 'r') as f:\n",
-    "    three_eiy = f.readlines()\n",
-    "\n",
-    "ppdb2 = PandasPdb()\n",
-    "ppdb2.read_pdb_from_list(three_eiy)\n",
-    "\n",
-    "ppdb2.df['ATOM'].head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Plotting"
    ]
   },
@@ -1630,7 +1624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy.pdb.gz](https://github.com/rasbt/biopandas/blob/master/docs/sources/tutorials/data/3eiy.pdb.gz?raw=true)]"
+    "[File link: [3eiy.pdb.gz](https://github.com/rasbt/biopandas/blob/main/docs/tutorials/data/3eiy.pdb.gz?raw=true)]"
    ]
   },
   {
@@ -1737,8 +1731,10 @@
    "source": [
     "The Root-mean-square deviation (RMSD) is simply a measure of the average distance between atoms of 2 protein or ligand structures. This calculation of the Cartesian error follows the equation:\n",
     "\n",
-    "$$RMSD(a, b) = \\sqrt{\\frac{1}{n} \\sum^{n}_{i=1} \\big((a_{ix})^2 + (a_{iy})^2 + (a_{iz})^2 \\big)} \\\\\n",
-    "= \\sqrt{\\frac{1}{n} \\sum^{n}_{i=1} || a_i + b_i||_2^2}$$"
+    "$$\n",
+    "RMSD(a, b) = \\sqrt{\\frac{1}{n} \\sum^{n}_{i=1} \\big((a_{ix})^2 + (a_{iy})^2 + (a_{iz})^2 \\big)}\n",
+    "= \\sqrt{\\frac{1}{n} \\sum^{n}_{i=1} || a_i + b_i||_2^2}\n",
+    "$$"
    ]
   },
   {
@@ -1928,7 +1924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy.pdb](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/3eiy.pdb)]"
+    "[File link: [3eiy.pdb](https://raw.githubusercontent.com/rasbt/biopandas/main/docs/tutorials/data/3eiy.pdb)]"
    ]
   },
   {
@@ -2302,7 +2298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's say we loaded a PDB structure, removed it from it's hydrogens:"
+    "Let's say we loaded a PDB structure, removed it from its hydrogens:"
    ]
   },
   {
@@ -2320,7 +2316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy.pdb.gz](https://github.com/rasbt/biopandas/blob/master/docs/sources/tutorials/data/3eiy.pdb.gz?raw=true)]"
+    "[File link: [3eiy.pdb.gz](https://github.com/rasbt/biopandas/blob/main/docs/tutorials/data/3eiy.pdb.gz?raw=true)]"
    ]
   },
   {
@@ -2346,7 +2342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy_stripped.pdb](https://raw.githubusercontent.com/rasbt/biopandas/master/docs/sources/tutorials/data/3eiy_stripped.pdb)]"
+    "[File link: [3eiy_stripped.pdb](https://raw.githubusercontent.com/rasbt/biopandas/main/docs/tutorials/data/3eiy_stripped.pdb)]"
    ]
   },
   {
@@ -2372,14 +2368,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[File link: [3eiy_stripped.pdb.gz](https://github.com/rasbt/biopandas/blob/master/docs/sources/tutorials/data/3eiy_stripped.pdb.gz?raw=true)]"
+    "[File link: [3eiy_stripped.pdb.gz](https://github.com/rasbt/biopandas/blob/main/docs/tutorials/data/3eiy_stripped.pdb.gz?raw=true)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2393,7 +2396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
